# intro-to-axum

./: README.md
lessons/data/: .env  Cargo.toml  docker-compose.yaml
lessons/data/src/: lib.rs
lessons/data/src/database/: tasks.rs  users.rs
lessons/data/src/routes/: custom_json_extractor.rs  mod.rs  task.rs  validate_with_serde.rs
lessons/hello/: Cargo.toml
lessons/hello/src/: lib.rs  main.rs
lessons/hello/src/routes/: agent.rs  auth.rs  hello.rs  json.rs  middle.rs  mirror.rs  mod.rs  param.rs  status.rs  thing.rs  validation.rs
