[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors"] }
